fix content covered by fixed header

--- a/src/app/[locale]/movies/(search)/layout.module.scss
+++ b/src/app/[locale]/movies/(search)/layout.module.scss
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 20px;
     margin: 50px;
     .content {
         display: flex;
