--- a/src/app/[locale]/page.module.scss
+++ b/src/app/[locale]/page.module.scss
@@ -1,8 +1,10 @@
 .main {
   display: flex;
+  justify-content: center;
+  align-items: flex-start;
   gap: 100px;
   margin: 50px;
+  margin-top: 100px !important;
   flex-direction: row;
-  padding: 10px 50px 0 50px;
   min-height: 100vh;
 }
